# fastly_build

./: Cargo.toml  Dockerfile  README.md
build-test/: Cargo.toml  fastly.toml
src/: main.rs  result_template.html
