[package]
name = "fastlybuild"
version = "0.1.0"
authors = ["Xun Gu <yesguxun@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
hyper = { version = "^0.14", features = ["server"] }
rand = { version = "^0.8", features = ["small_rng"] }
reqwest = { version = "^0.11", features = ["gzip", "native-tls", "multipart"] }
tokio = { version = "^1.3", features = ["rt-multi-thread", "macros"] }
urlencoding = "^1.1"


